# SonicTransmute

./: App.tsx  README.md  constants.tsx  index.html  metadata.json  package.json  types.ts
components/: FileItem.tsx  StatusCard.tsx
services/: tauriService.ts
src-tauri/: Cargo.toml
src-tauri/src/: main.rs  ncm.rs  watcher.rs
