[package]
name = "sonic-transmute"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["wry", "protocol-asset"] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
base64 = "0.21"
aes = "0.8"
cbc = "0.1"
byteorder = "1.4"
notify = "6.1.1"
rand = "0.8"
walkdir = "2"
